project-guestbook-aks/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-backend
  template:
    metadata:
      labels:
        app: guestbook-backend
    spec:
      containers:
      - name: backend
        image: <ACR_LOGIN>/guestbook-backend:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-backend-svc
spec:
  selector:
    app: guestbook-backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
