project-guestbook-aks/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-frontend
  template:
    metadata:
      labels:
        app: guestbook-frontend
    spec:
      containers:
        - name: frontend
          image: <ACR_LOGIN>/guestbook-frontend:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend-svc
spec:
  selector:
    app: guestbook-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
