project-guestbook-aks/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: guestbook.example.com # replace with your domain or use xip.io / nip.io for demos
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-frontend-svc
                port:
                  number: 80
